    Build exe ver 04.04.19

05.04.2019
    Pushed update

    Moved Input loop to its own class, grouped code better, improved exit.
    Moved Date/ update code to own class.

24.05.2019

    Made Export.py object oriented, Modified Monitor to allow this.

29.05.2019

    Made multi_export into a property
    Simplified Egel + Clipboard watcher

31.05.2019

    Inverted instructions dict to better allow aliases, added more aliases
    Added export to last file functionality
    Moved to_file to Export_class
    Fixed some bugs with multi export and tofile
    Cleared up todo's

03.06.2019

    Fixed bug with multi file not being reset.

04.06.2019

    Edited Readme + Help text

07.06.2019

    Refactored the colourful message part into a String subclass.

11.06.2019

    Cleaned up Message class
    Added MyEmitter class to handle crash when losing and regaining connection to the team drive.
    Prevented duplicate messages when threads lose and gain connection

13.06.2019

    Re-wrote help function to be clearer

14.06.2019

    Cleaned up help function a little
    Added timestamp to export complete prints.

11.07.2019
    Added __radd__, __str__ and __init__ to Message, simplified prints throughout using __str__

18.07.2019
    Added case insensitivity for sheet name substitution
    Shortened export complete prints, removed machine info
    Fixed distinguished prints to use '>>>' again
    Added comments to MyEmitter class
    Update exe

05.08.2019
    Commented many functions for future maintainers
    Moved list of users to config.ini

13.08.2019
    Re-did method of determining program location. Can now run from command line.
    Added Version and master path in config, __version__ to Monitor.
    If running from remote drive display recommendation to install locally
    If installed locally, check remote drive for update and periodically display reminder.

    Can installing to startup now works properly regardless of how the program was launched.
